<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".ui.SignupActivity">


    <TextView
        style="@style/font_style_headers"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="@string/app_name" />

    <TextView
        style="@style/font_style_normal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/create_account" />


    <EditText
        android:id="@+id/username"
        style="@style/edittext"
        android:maxLength="12"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="50dp"
        android:hint="@string/username" />




    <EditText
        android:id="@+id/password"
        style="@style/edittext"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/confirm_password"
        style="@style/edittext"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:hint="@string/confirm_password"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/btn_signup"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="30sp"
        android:text="@string/signup"
        style="@style/dark_button"/>


    <TextView
        android:id="@+id/lbl_login"
        android:layout_width="match_parent"
        android:gravity="center"
        android:padding="10sp"
        android:layout_marginTop="10sp"
        android:layout_height="wrap_content"
        style="@style/font_style_normal"
        android:text="@string/login_text"/>


</LinearLayout>